# dprint-plugin-tex-fmt

./: .dprint.jsonc  .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  schema.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
crates/web-time/: Cargo.toml
crates/web-time/src/: lib.rs  wasm.rs
scripts/: e2e.sh
src/: config.rs  lib.rs  main.rs  schema_types.rs
tests/: fixtures.rs  format.rs
tests/fixtures/short_document/source/: short_document.tex
tests/fixtures/tabsize/: config.json
tests/fixtures/wrap/: config.json
tests/fixtures/wrap/source/: wrap.tex
