[package]
name         = "dprint-plugin-tex-fmt"
version      = "0.1.1"
edition      = "2024"
rust-version = "1.96"
description  = "dprint Wasm plugin that formats tex"
readme       = "README.md"
repository   = "https://github.com/kjanat/dprint-plugin-tex-fmt"
license      = "Apache-2.0 OR MIT"
keywords     = ["dprint", "formatter", "tex", "wasm"]
categories   = ["development-tools", "text-editors"]
publish      = false
autobins     = false

[lib]
crate-type = ["cdylib", "lib"]
name       = "dprint_plugin_tex_fmt"
path       = "src/lib.rs"

[dependencies]
anyhow = "1"

[dependencies.dprint-core]
version  = "0.67"
features = ["formatting", "wasm"]

[dependencies.dprint-core-macros]
version = "0.1"

[dependencies.json-schema-sort]
version          = "0.1"
default-features = false

[dependencies.log]
version = "0.4"

[dependencies.schemars]
version = "1"

[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.tex-fmt]
version = "0.5"

[build-dependencies]
json-schema-sort.version          = "0.1"
json-schema-sort.default-features = false
schemars                          = "1"
serde.version                     = "1"
serde.features                    = ["derive"]
serde_json                        = "1"

[patch.crates-io]
# tex-fmt depends on web-time which uses wasm-bindgen browser APIs on
# wasm32-unknown-unknown — a target that dprint plugins require but that has
# no browser runtime.  This local stub replaces the timing implementation
# with an atomic counter so the plugin loads without unresolved JS imports.
web-time = { path = "crates/web-time" }

# Size-optimized profile for the published Wasm artifact: cold-load cost
# dominates a dprint plugin, so trade compile time / steady-state speed for a
# smaller binary. Built with `cargo build --profile wasm-release`.
[profile.wasm-release]
inherits      = "release"
opt-level     = "z"
strip         = true
lto           = "fat"
panic         = "abort"
codegen-units = 1
